syntax = "proto3";

option csharp_namespace = "NameFixer.gRPCServices";
import "google/api/annotations.proto";

package namefixer.secondnames;

service SecondNameService {
  rpc GetSecondNameSuggestions (GetSecondNameSuggestionsRequest) returns (GetSecondNameSuggestionsResponse) {
    option (google.api.http) = {
      get: "/SecondNameService/{second_name}"
    };
  }
}

message GetSecondNameSuggestionsRequest {
  string second_name = 1;
}

message GetSecondNameSuggestionsResponse {
  repeated string second_name_suggestions = 1;
}